[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-studio"
version = "0.1.0"
description = "A powerful AI Agent framework for building autonomous assistants"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Weiwei1210", email = "Weiwei1210@example.com"}
]
keywords = ["ai", "agent", "openai", "claude", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "asyncio",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
    "ruff",
]
all = [
    "openai",
    "anthropic",
    "requests",
    "beautifulsoup4",
]

[project.urls]
Homepage = "https://github.com/Weiwei1210/agent-studio"
Documentation = "https://agent-studio.readthedocs.io"
Repository = "https://github.com/Weiwei1210/agent-studio"
Issues = "https://github.com/Weiwei1210/agent-studio/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_studio*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true